//
// Created by imry on 1/15/25.
//

#ifndef SPECIALSQUARE_HPP
#define SPECIALSQUARE_HPP



class SpecialSquare {

};



#endif //SPECIALSQUARE_HPP
